production/myexampleapp-production-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/object: service
    app: myexampleapp
    env: production
  name: myexampleapp-production-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myexampleapp
    env: production
  type: ClusterIP
